# Cuties

./: .directory  .gitignore  1ohpcrmp.xjx.txt  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CodingStyle.md  Cuties.kdev4  Cuties_title.psd  Doxyfile  Kreogist-Cute-Ide.pro  README.md  THANKS  TODO  Thumbs.db  What's New  archives.html  blinkstyle.css  btn_normal.psd  button_design.psd  categories.html  compilerbase.cpp  compilerbase.h  compilerbasefactor.cpp  compilerbasefactor.h  cpphighlighter.cpp  cpphighlighter.h  cuties.js  cxx11.cmake  default.style  demo.html  dialog.js  downloads.html  faq.html  features.html  gcc.cpp  gcc.h  gdb.cpp  gdb.h  gdbmivalue.cpp  (+65 more)
.kdev4/: Cuties.kdev4
author/: kreogist-dev-team.html
category/: constructing.html  content.html  demo.html  page.html  pages.html
cn/: .directory  downloads.html  downloads_mirror_1.html  downloads_mirror_2.html  faq.html  features.html  index.html  mobile-downloads.html  opensource.html  support.html
doc/: .~lock.Architecture.odg#  AUTHORS  Architecture.odg  COPYING  Compile-Design.odg  Debug-Mode-Design.odg  New-Debug-Mode-Design.odg  Thumbs.db  search-design.odg
doc/Assistant/: index.html
doc/Assistant/BuildingAndRunning/: BuildingYourProgram.html
doc/Assistant/DesigningYourProgram/: CreatingSourceFile.html  OpenAnExsistingFile.html  SaveYourSourceFile.html
doc/Assistant/GettingStarted/: GettingStartedGuides.html  Overview.html  UserInterface.html
doc/Assistant/Getting_Started/: Overview.html  Support_Platform.html
en/: downloads.html  downloads_mirror_1.html  downloads_mirror_2.html  faq.html  features.html  index.html  opensource.html  support.html
font/: CMakeLists.txt
lang/: outlang.map
language/: zh_CN.qm
licenses/: LICENSE_FDL.rtf  LICENSE_FDL.txt  LICENSE_GPL.rtf  LICENSE_LGPL.rtf
pages/: readme.html
src/: CMakeLists.txt  Kreogist-Cuties.pro
src/app/: .kcieditorconfigure.cpp.BASE.19077.cpp.swp  .kcieditorconfigure.cpp.LOCAL.19077.cpp.swp  .kcieditorconfigure.cpp.REMOTE.19077.cpp.swp  .kcieditorconfigure.cpp.swp  CMakeLists.txt  Cuties.icns  DefaultColorConfig.ini  Info.plist  Kreogist-Cute-Ide.pro~  README.md  app.pro  compileoutputreceiver.cpp  compileoutputreceiver.h  compilerbase.cpp  compilerbase.h  compilerbasefactor.cpp  compilerbasefactor.h  connectionhandler.cpp  connectionhandler.h  cpphighlighter.cpp  cpphighlighter.h  dbgoutputreceiver.cpp  dbgoutputreceiver.h  default.style  fpc.cpp  fpc.h  gcc.cpp  gcc.h  gdb.cpp  gdb.h  gdbcontroller.cpp  gdbcontroller.h  gdbmivalue.cpp  gdbmivalue.h  highlighterGlobal.h  highlighterfactory.cpp  highlighterfactory.h  kcclipboard.cpp  kcclipboard.h  kccodecompileprogress.cpp  (+266 more)
src/app/ColorBase/: CMakeLists.txt  HKS E.acb  HKS N.acb  HKS Z Process.acb  PANTONE metallic coated.acb  PANTONE process coated.acb  PANTONE solid matte.acb  PANTONE solid to process EURO.acb  PANTON_solid_coated.cdb  PANTON_solid_uncoated.cdb  TOYO COLOR FINDER.acb
src/app/Controls/GraphicButtons/: kcgraphicbuttonbase.cpp  kcgraphicbuttonbase.h  kcgraphicbuttoncancel.cpp  kcgraphicbuttoncancel.h  kcgraphicbuttonok.cpp  kcgraphicbuttonok.h
src/app/Controls/Preference/: kcpreferenceconditiongroup.cpp  kcpreferenceconditiongroup.h  kcpreferenceitembase.cpp  kcpreferenceitembase.h  kcpreferenceitemboolean.cpp  kcpreferenceitemboolean.h  kcpreferenceitembooleangroup.cpp  kcpreferenceitembooleangroup.h  kcpreferenceitemcolor.cpp  kcpreferenceitemcolor.h  kcpreferenceitemcombo.cpp  kcpreferenceitemcombo.h  kcpreferenceitemint.cpp  kcpreferenceitemint.h  kcpreferenceitempath.cpp  kcpreferenceitempath.h
src/app/Controls/Setting-List/: kcisettinglist.cpp  kcisettinglist.h
src/app/Controls/Setting-List/ListItem/: kcisettinglistitembase.cpp  kcisettinglistitembase.h
src/app/Controls/SettingItems/: kcisettinglistitembase.cpp  kcisettinglistitembase.h  kcisettinglistitemboolean.cpp  kcisettinglistitemboolean.h  kcisettinglistitembrowsetext.cpp  kcisettinglistitembrowsetext.h  kcisettinglistitembutton.cpp  kcisettinglistitembutton.h  kcisettinglistitemcombo.cpp  kcisettinglistitemcombo.h  kcisettinglistitemfoldertext.cpp  kcisettinglistitemfoldertext.h  kcisettinglistitemlanguageitem.cpp  kcisettinglistitemlanguageitem.h  kcisettinglistitemlinetext.cpp  kcisettinglistitemlinetext.h  kcisettinglistitemnuminput.cpp  kcisettinglistitemnuminput.h  kcsettingcontrollineedit.cpp  kcsettingcontrollineedit.h  kcsettinglistitembase.cpp  kcsettinglistitembase.h  kcsettinglistitemboolean.cpp  kcsettinglistitemboolean.h  kcsettinglistitembrowsetext.cpp  kcsettinglistitembrowsetext.h  kcsettinglistitembutton.cpp  kcsettinglistitembutton.h  kcsettinglistitemcombo.cpp  kcsettinglistitemcombo.h  kcsettinglistitemlanguageitem.cpp  kcsettinglistitemlanguageitem.h  kcsettinglistitemlinetext.cpp  kcsettinglistitemlinetext.h  kcsettinglistitemnuminput.cpp  kcsettinglistitemnuminput.h
src/app/Controls/UserControls/: kciscrollarea.cpp  kciscrollarea.h
src/app/colordatabase/: PANTON_solid_coated.cdb
src/app/default_settings/: CMakeLists.txt  Cuties_Unix.ini  Cuties_Win32.ini  DefaultColorConfig.ini  default.style
src/app/image/: Cuties.icns  Cuties.psd  Splash.psd  Thumbs.db
src/app/image/FileAssociate/: FileIconMould_128x128.psd  FileIconMould_512x512.psd
src/app/translations/: CMakeLists.txt  en_US.ts  zh_CN.ts
src/lib/: CMakeLists.txt  kccolorconfigure.cpp  kclib_global.h  kcmainwindow.h  kctitlebar.cpp  kctitlebar.h
src/old_version_files/app/: CMakeLists.txt  Info.plist  app.pro  dbgoutputreceiver.cpp  (+81 more)
src/old_version_files/app/default_settings/: CMakeLists.txt  Cuties_Unix.ini  Cuties_Win32.ini  DefaultColorConfig.ini
src/old_version_files/app/translations/: CMakeLists.txt  Locale.db  en_US.ts  mac_mainmenu.txt
src/old_version_files/tests/kchighlighter/: CMakeLists.txt  tst_kchighlightertest.cpp
src/old_version_files/tools/ConsoleRunner/: CMakeLists.txt  ConsoleRunner.pro
src/tests/: CMakeLists.txt  tests.pro
src/tests/kcconfigure/: CMakeLists.txt  kcconfigure.pro  tst_kcconfiguretest.cpp  tst_kcconfiguretest.h
theme/css/: cuties-local.css  cuties.css
(+40 files in other folders)
